--- a/css/ui.css
+++ b/css/ui.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   font-family: Myriad Pro, Helvetica, Arial, sans-serif;
   background-color: #111;
+  color: #f7f7f7;
 }
 
 #buffer {
