--- a/css/design.css
+++ b/css/design.css
@@ -60,6 +60,7 @@
     width: 900px;
     overflow-x: scroll;
     overflow-y: hidden;
+    -wekbit-overflow-scrolling: touch;
 }
 .thumbs-inner {
     width: 1275px;
