--- a/css/ui.css
+++ b/css/ui.css
@@ -1,5 +1,6 @@
 html, body {
   height: 100%;
+  overflow: hidden;
 }
 
 body {
@@ -9,7 +10,12 @@ body {
   color: #f7f7f7;
 }
 
-#buffer {
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.buffer {
   height: 50%;
 }
 
@@ -19,5 +25,25 @@ body {
   margin: 0 auto;
   position: relative;
   top: -225px;
-  border: 1px solid #0f0;
+  box-shadow: 0 0 0 1px #0f0;
+}
+
+#start-screen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-family: 'uni05';
+  text-align: center;
+  color: #0f0;
+  background: #000;
+}
+
+.start-game {
+  font-size: 74px;
+  display: block;
+  height: 100px;
+  position: relative;
+  top: -50px;
 }
