--- a/css/ui.css
+++ b/css/ui.css
@@ -28,6 +28,12 @@ a {
   box-shadow: 0 0 0 1px #0f0;
 }
 
+#game canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 #start-screen {
   position: absolute;
   top: 0;
