--- a/css/ui.css
+++ b/css/ui.css
@@ -1,3 +1,9 @@
+* {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+}
+
 html, body {
   height: 100%;
   overflow: hidden;
