--- a/css/ui.css
+++ b/css/ui.css
@@ -31,7 +31,7 @@ a {
   margin: 0 auto;
   position: relative;
   top: -225px;
-  box-shadow: 0 0 0 1px #0f0;
+  box-shadow: 0 0 0 1px #0ed839;
 }
 
 body.touch #game {
