--- a/css/ui.css
+++ b/css/ui.css
@@ -22,7 +22,7 @@ a {
 }
 
 .buffer {
-  height: 50%;
+  height: 40%;
 }
 
 #game {
@@ -108,4 +108,17 @@ button.action {
 
 button.pause {
   background-image: url(../img/button-pause.png);
+}
+
+#rules {
+  font-size: 1.2em;
+  width: 100%;
+  position: absolute;
+  text-align: center;
+  bottom: -35%;
+}
+
+#rules p {
+  color: #0f0;
+  margin: 0.6em 0;
 }
