--- a/editor/css/editor.css
+++ b/editor/css/editor.css
@@ -127,3 +127,14 @@
   margin-left: -200px;
   margin-top: -300px;
 }
+
+#level-list {
+  position: absolute;
+  margin: 0;
+  top: 50%;
+  left: 50%;
+  margin-left: 480px;
+  margin-top: -100px;
+  list-style: none;
+  padding: 0;
+}
